{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 16,
  "lineage": "df7b37df-620f-db6a-3683-75e1ab918228",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a29e5e945228fa1",
            "arn": "arn:aws:ec2:us-west-2:686781234621:instance/i-0440fd499971bcdad",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0440fd499971bcdad",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vpc-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09163aa2a549a5e6f",
            "private_dns": "ip-192-168-0-96.us-west-2.compute.internal",
            "private_ip": "192.168.0.96",
            "public_dns": "ec2-52-39-150-164.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.150.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-040615a0f1e241b17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f90efc73e8d89bc",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ae96069933525061"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.pubsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwtf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:internet-gateway/igw-074e05e677c2a6c9e",
            "id": "igw-074e05e677c2a6c9e",
            "owner_id": "686781234621",
            "tags": {
              "Name": "IGWTF"
            },
            "vpc_id": "vpc-0959b00aed87f59b1"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc630e1fd7385f7a",
            "owner_id": "686781234621",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRT"
            },
            "vpc_id": "vpc-0959b00aed87f59b1"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a27a393cd2f351f5",
            "owner_id": "686781234621",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074e05e677c2a6c9e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "vpc_id": "vpc-0959b00aed87f59b1"
          },
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03045f92cdedc1a8d",
            "route_table_id": "rtb-0a27a393cd2f351f5",
            "subnet_id": "subnet-03f90efc73e8d89bc"
          },
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_route_table.pubRT",
            "aws_subnet.pubsubnet",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a6d726ad5f4c41c",
            "route_table_id": "rtb-0fc630e1fd7385f7a",
            "subnet_id": "subnet-04e620ea615a0599d"
          },
          "dependencies": [
            "aws_route_table.priRT",
            "aws_subnet.prisubnet",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:security-group/sg-0ae96069933525061",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae96069933525061",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "686781234621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0959b00aed87f59b1"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:subnet/subnet-04e620ea615a0599d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-04e620ea615a0599d",
            "map_public_ip_on_launch": false,
            "owner_id": "686781234621",
            "tags": {
              "Name": "Privatesubnet"
            },
            "vpc_id": "vpc-0959b00aed87f59b1"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:subnet/subnet-03f90efc73e8d89bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-03f90efc73e8d89bc",
            "map_public_ip_on_launch": false,
            "owner_id": "686781234621",
            "tags": {
              "Name": "Publicsubnet"
            },
            "vpc_id": "vpc-0959b00aed87f59b1"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:vpc/vpc-0959b00aed87f59b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c2b226030d735e50",
            "default_route_table_id": "rtb-0c848e2a66f6b426a",
            "default_security_group_id": "sg-0951442c886346870",
            "dhcp_options_id": "dopt-a8483ed0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0959b00aed87f59b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c848e2a66f6b426a",
            "owner_id": "686781234621",
            "tags": {
              "Name": "VPCTF"
            }
          }
        }
      ]
    }
  ]
}